objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>CCPA</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Cancelled</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>Pending</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Resolved</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Compliance Complaint</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Awaiting Approval</fullName>
        </values>
        <values>
            <fullName>Cancelled</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Resolved</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>MyHR</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Cancelled</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>In Process</fullName>
        </values>
        <values>
            <fullName>In Queue</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Resolved</fullName>
        </values>
        <values>
            <fullName>Waiting for Customer</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>FinServ__FinancialAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Financial Account</label>
        <referenceTo>FinServ__FinancialAccount__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__Household__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Household</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Household Cases</relationshipLabel>
        <relationshipName>HouseholdCases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WT_Account_Ref__c</fullName>
        <description>Created as a part of DBSCRM-417</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Account/ Ref # ( If not in CRM)</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Action_ListView__c</fullName>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>401k</fullName>
                </value>
                <value>
                    <fullName>Access/Reset</fullName>
                </value>
                <value>
                    <fullName>Access Management</fullName>
                </value>
                <value>
                    <fullName>Accommodation</fullName>
                </value>
                <value>
                    <fullName>Accounts Payable</fullName>
                </value>
                <value>
                    <fullName>Badge Access</fullName>
                </value>
                <value>
                    <fullName>Benefits</fullName>
                </value>
                <value>
                    <fullName>Business Cards</fullName>
                </value>
                <value>
                    <fullName>Cobra</fullName>
                </value>
                <value>
                    <fullName>Complaint</fullName>
                </value>
                <value>
                    <fullName>Contingent Worker</fullName>
                </value>
                <value>
                    <fullName>Correction/Update</fullName>
                </value>
                <value>
                    <fullName>COVID</fullName>
                </value>
                <value>
                    <fullName>Deductions</fullName>
                </value>
                <value>
                    <fullName>Delegation</fullName>
                </value>
                <value>
                    <fullName>Dental</fullName>
                </value>
                <value>
                    <fullName>Direct Deposit</fullName>
                </value>
                <value>
                    <fullName>Enrollment</fullName>
                </value>
                <value>
                    <fullName>Equifax</fullName>
                </value>
                <value>
                    <fullName>Equity</fullName>
                </value>
                <value>
                    <fullName>ESPP</fullName>
                </value>
                <value>
                    <fullName>Exception Form</fullName>
                </value>
                <value>
                    <fullName>Goals/Performance Management</fullName>
                </value>
                <value>
                    <fullName>Holiday</fullName>
                </value>
                <value>
                    <fullName>HR Partners</fullName>
                </value>
                <value>
                    <fullName>HSA/FSA</fullName>
                </value>
                <value>
                    <fullName>Insurance Cards</fullName>
                </value>
                <value>
                    <fullName>IT Support</fullName>
                </value>
                <value>
                    <fullName>Learning &amp; Development</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Action__c</fullName>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>WT_Topic__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>401k</fullName>
                </value>
                <value>
                    <fullName>Access/Reset</fullName>
                </value>
                <value>
                    <fullName>Access Management</fullName>
                </value>
                <value>
                    <fullName>Accommodation</fullName>
                </value>
                <value>
                    <fullName>Accounts Payable</fullName>
                </value>
                <value>
                    <fullName>Badge Access</fullName>
                </value>
                <value>
                    <fullName>Benefits</fullName>
                </value>
                <value>
                    <fullName>Business Cards</fullName>
                </value>
                <value>
                    <fullName>Cobra</fullName>
                </value>
                <value>
                    <fullName>Complaint</fullName>
                </value>
                <value>
                    <fullName>Contingent Worker</fullName>
                </value>
                <value>
                    <fullName>Correction/Update</fullName>
                </value>
                <value>
                    <fullName>COVID</fullName>
                </value>
                <value>
                    <fullName>Deductions</fullName>
                </value>
                <value>
                    <fullName>Delegation</fullName>
                </value>
                <value>
                    <fullName>Dental</fullName>
                </value>
                <value>
                    <fullName>Direct Deposit</fullName>
                </value>
                <value>
                    <fullName>Enrollment</fullName>
                </value>
                <value>
                    <fullName>Equifax</fullName>
                </value>
                <value>
                    <fullName>Equity</fullName>
                </value>
                <value>
                    <fullName>ESPP</fullName>
                </value>
                <value>
                    <fullName>Exception Form</fullName>
                </value>
                <value>
                    <fullName>Goals/Performance Management</fullName>
                </value>
                <value>
                    <fullName>Holiday</fullName>
                </value>
                <value>
                    <fullName>HR Partners</fullName>
                </value>
                <value>
                    <fullName>HSA/FSA</fullName>
                </value>
                <value>
                    <fullName>Insurance Cards</fullName>
                </value>
                <value>
                    <fullName>IT Support</fullName>
                </value>
                <value>
                    <fullName>Learning &amp; Development</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Address1__c</fullName>
        <description>Created as a part of DBSFCRM-417</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Address 1</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Address2__c</fullName>
        <description>Created as a part of DBSFCRM-417</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Address 2</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Applicable_Law_Regulation__c</fullName>
        <description>Created as a part of DBSFCRM-417</description>
        <label>Applicable Law or Regulation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ADA – Americans with Disabilities</fullName>
                </value>
                <value>
                    <fullName>Children’s Online Privacy Act (COPA)</fullName>
                </value>
                <value>
                    <fullName>CRA – Community Reinvestment Act</fullName>
                </value>
                <value>
                    <fullName>Do Not Call</fullName>
                </value>
                <value>
                    <fullName>Elder Abuse</fullName>
                </value>
                <value>
                    <fullName>Fair Credit Reporting Act</fullName>
                </value>
                <value>
                    <fullName>Fair Housing Act</fullName>
                </value>
                <value>
                    <fullName>Fair Lending/Discrimination</fullName>
                </value>
                <value>
                    <fullName>FINRA</fullName>
                </value>
                <value>
                    <fullName>Flood</fullName>
                </value>
                <value>
                    <fullName>Fraud</fullName>
                </value>
                <value>
                    <fullName>Homeownership Counseling</fullName>
                </value>
                <value>
                    <fullName>Homeowner’s Protection Act</fullName>
                </value>
                <value>
                    <fullName>ID Theft Red Flags</fullName>
                </value>
                <value>
                    <fullName>Info Security</fullName>
                </value>
                <value>
                    <fullName>Junk/Fax/CAN SPAM</fullName>
                </value>
                <value>
                    <fullName>Modification/Foreclosure</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Overdraft Practices</fullName>
                </value>
                <value>
                    <fullName>Protecting Tenants at Foreclosure</fullName>
                </value>
                <value>
                    <fullName>Regulation AA</fullName>
                </value>
                <value>
                    <fullName>Regulation B: Equal Credit Opportunity Act</fullName>
                </value>
                <value>
                    <fullName>Regulation C: Home Mortgage Disclosure</fullName>
                </value>
                <value>
                    <fullName>Regulation CC</fullName>
                </value>
                <value>
                    <fullName>Regulation D: Reserves/NOW/Interest</fullName>
                </value>
                <value>
                    <fullName>Regulation DD: Truth in Savings</fullName>
                </value>
                <value>
                    <fullName>Regulation E: Electronic Fund Transfers</fullName>
                </value>
                <value>
                    <fullName>Regulation F: Fair Debt Collection Practices Act</fullName>
                </value>
                <value>
                    <fullName>Regulation GG</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Applicable_Law_or_Regulation2__c</fullName>
        <description>Created as a part of DBSFCRM-417</description>
        <label>Applicable Law or Regulation2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ADA – Americans with Disabilities</fullName>
                </value>
                <value>
                    <fullName>Children’s Online Privacy Act (COPA)</fullName>
                </value>
                <value>
                    <fullName>CRA – Community Reinvestment Act</fullName>
                </value>
                <value>
                    <fullName>Do Not Call</fullName>
                </value>
                <value>
                    <fullName>Elder Abuse</fullName>
                </value>
                <value>
                    <fullName>Fair Credit Reporting Act</fullName>
                </value>
                <value>
                    <fullName>Fair Housing Act</fullName>
                </value>
                <value>
                    <fullName>Fair Lending/Discrimination</fullName>
                </value>
                <value>
                    <fullName>FINRA</fullName>
                </value>
                <value>
                    <fullName>Flood</fullName>
                </value>
                <value>
                    <fullName>Fraud</fullName>
                </value>
                <value>
                    <fullName>Homeownership Counseling</fullName>
                </value>
                <value>
                    <fullName>Homeowner’s Protection Act</fullName>
                </value>
                <value>
                    <fullName>ID Theft Red Flags</fullName>
                </value>
                <value>
                    <fullName>Info Security</fullName>
                </value>
                <value>
                    <fullName>Junk/Fax/CAN SPAM</fullName>
                </value>
                <value>
                    <fullName>Modification/Foreclosure</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Overdraft Practices</fullName>
                </value>
                <value>
                    <fullName>Protecting Tenants at Foreclosure</fullName>
                </value>
                <value>
                    <fullName>Regulation AA</fullName>
                </value>
                <value>
                    <fullName>Regulation B: Equal Credit Opportunity Act</fullName>
                </value>
                <value>
                    <fullName>Regulation C: Home Mortgage Disclosure</fullName>
                </value>
                <value>
                    <fullName>Regulation CC</fullName>
                </value>
                <value>
                    <fullName>Regulation D: Reserves/NOW/Interest</fullName>
                </value>
                <value>
                    <fullName>Regulation DD: Truth in Savings</fullName>
                </value>
                <value>
                    <fullName>Regulation E: Electronic Fund Transfers</fullName>
                </value>
                <value>
                    <fullName>Regulation F: Fair Debt Collection Practices Act</fullName>
                </value>
                <value>
                    <fullName>Regulation GG</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Attempted_to_Contact__c</fullName>
        <label>Attempted to Contact</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_BankEntity__c</fullName>
        <formula>WT_Employee__r.WT_Entity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bank/Entity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Bank_Entity__c</fullName>
        <description>Created as a part of DBSFCRM-417</description>
        <label>Bank Entity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Barrington Bank &amp; Trust Company, N.A.</fullName>
                </value>
                <value>
                    <fullName>Beverly Bank &amp; Trust Company, N.A.</fullName>
                </value>
                <value>
                    <fullName>Centralized Loan Servicing</fullName>
                </value>
                <value>
                    <fullName>Chicago Deferred Exchange</fullName>
                </value>
                <value>
                    <fullName>Crystal Lake Bank &amp; Trust Company, N.A.</fullName>
                </value>
                <value>
                    <fullName>First Insurance Funding -Canada</fullName>
                </value>
                <value>
                    <fullName>First Insurance Funding -US</fullName>
                </value>
                <value>
                    <fullName>First National Bank of Omaha</fullName>
                </value>
                <value>
                    <fullName>Great Lakes Advisors</fullName>
                </value>
                <value>
                    <fullName>Hinsdale Bank &amp; Trust Company</fullName>
                </value>
                <value>
                    <fullName>Lake Forest Bank &amp; Trust Company, N.A.</fullName>
                </value>
                <value>
                    <fullName>Libertyville Bank &amp; Trust Company</fullName>
                </value>
                <value>
                    <fullName>Northbrook Bank &amp; Trust Company</fullName>
                </value>
                <value>
                    <fullName>Old Plank Trail Community Bank, N.A.</fullName>
                </value>
                <value>
                    <fullName>Schaumburg Bank &amp; Trust Company, N.A.</fullName>
                </value>
                <value>
                    <fullName>St. Charles Bank &amp; Trust</fullName>
                </value>
                <value>
                    <fullName>State Bank of the Lakes</fullName>
                </value>
                <value>
                    <fullName>The Chicago Trust Company</fullName>
                </value>
                <value>
                    <fullName>Town Bank</fullName>
                </value>
                <value>
                    <fullName>Tricom Funding</fullName>
                </value>
                <value>
                    <fullName>Veterans First</fullName>
                </value>
                <value>
                    <fullName>Village Bank &amp; Trust</fullName>
                </value>
                <value>
                    <fullName>Wheaton Bank &amp; Trust</fullName>
                </value>
                <value>
                    <fullName>Wintrust Asset Finance</fullName>
                </value>
                <value>
                    <fullName>Wintrust Financial Corporation</fullName>
                </value>
                <value>
                    <fullName>Wintrust Investments</fullName>
                </value>
                <value>
                    <fullName>Wintrust LIfe</fullName>
                </value>
                <value>
                    <fullName>Wintrust Mortgage</fullName>
                </value>
                <value>
                    <fullName>Wintrust/North Shore Community Bank &amp; Trust Company</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Bank_Number__c</fullName>
        <description>Created as a part of DBSFCRM-120</description>
        <label>Bank Number</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>118</fullName>
                </value>
                <value>
                    <fullName>158</fullName>
                </value>
                <value>
                    <fullName>167</fullName>
                </value>
                <value>
                    <fullName>289</fullName>
                </value>
                <value>
                    <fullName>291</fullName>
                </value>
                <value>
                    <fullName>318</fullName>
                </value>
                <value>
                    <fullName>380</fullName>
                </value>
                <value>
                    <fullName>495</fullName>
                </value>
                <value>
                    <fullName>529</fullName>
                </value>
                <value>
                    <fullName>600</fullName>
                </value>
                <value>
                    <fullName>629</fullName>
                </value>
                <value>
                    <fullName>669</fullName>
                </value>
                <value>
                    <fullName>870</fullName>
                </value>
                <value>
                    <fullName>919</fullName>
                </value>
                <value>
                    <fullName>924</fullName>
                </value>
                <value>
                    <fullName>All Banks</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Business_Hours_To_Complete__c</fullName>
        <label>Business Hours to Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Business_Line_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created as a part of DBSFCRM-417</description>
        <label>Business Line Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WT_Case_Title__c</fullName>
        <description>Created as a part of DBSFCRM-417</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Case Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Category__c</fullName>
        <description>Created as part of DBSFCRM-299</description>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Add/Change/Delete Customer</fullName>
                </value>
                <value>
                    <fullName>Lockbox - Other</fullName>
                </value>
                <value>
                    <fullName>Program Modification</fullName>
                </value>
                <value>
                    <fullName>Program Setup</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Census_Tract__c</fullName>
        <description>Created as a part of DBSFCRM-417</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Census Tract</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_City__c</fullName>
        <description>Created as a part of DBSFCRM-417</description>
        <encryptionScheme>None</encryptionScheme>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Closed_On__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Closed On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>WT_Consumer_Authenticated__c</fullName>
        <description>Created as part of DBSFCRM-197</description>
        <label>Consumer Authenticated</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Consumer_Email_Address__c</fullName>
        <description>Created as part of DBSFCRM-197</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Consumer Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>WT_Consumer_Mailing_Address__c</fullName>
        <description>Created as part of DBSFCRM-197</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Consumer Mailing Address</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>WT_Consumer_Name__c</fullName>
        <description>created as part of 197</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Consumer Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Consumer_Type__c</fullName>
        <description>Created as part of DBSFCRM-197</description>
        <label>Consumer Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Banking</fullName>
                </value>
                <value>
                    <fullName>Mortgage</fullName>
                </value>
                <value>
                    <fullName>First Insurance</fullName>
                </value>
                <value>
                    <fullName>Wealth</fullName>
                </value>
                <value>
                    <fullName>Wintrust Employee</fullName>
                </value>
                <value>
                    <fullName>Applicant for Employment</fullName>
                </value>
                <value>
                    <fullName>Not a Current Customer</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Contact_Date_Qtr__c</fullName>
        <formula>TEXT(YEAR(DATEVALUE(WT_Contact_Date__c)))+ &apos;-&apos; + &apos;Q&apos;+TEXT(Ceiling(Month(Datevalue( WT_Contact_Date__c )) / 3 ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Date Qtr</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Contact_Date_Year__c</fullName>
        <formula>TEXT(YEAR(DATEVALUE(WT_Contact_Date__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Date Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Contact_Date__c</fullName>
        <description>Created as part of DBSFCRM -1470</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Contact Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>WT_Contact_Method__c</fullName>
        <label>Contact Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
                <value>
                    <fullName>Mail</fullName>
                    <isActive>false</isActive>
                    <label>Mail</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Contact_non_CRM_User__c</fullName>
        <description>text field to replace contact non CRM User look up to employee Field</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Contact (non-CRM User)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Corrective_Action_Ref__c</fullName>
        <description>Created as  part of DBSFCRM-417</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Corrective Action Ref #</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Corrective_Action__c</fullName>
        <description>Created as  part of DBSFCRM-417</description>
        <label>Corrective Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Created_On__c</fullName>
        <description>Created as a part of DBSFCRM-417</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Created On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WT_Current_Phone_Number__c</fullName>
        <description>Created as a part of DBSFCRM-120</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Current Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>WT_Customer_Name_CRM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Name (CRM)</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases (Customer Name (CRM))</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WT_Customer_Name_non_CRM__c</fullName>
        <description>Created as a part of DBSFCRM-417</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Customer Name (non-CRM)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Data_Purge_Requested__c</fullName>
        <label>Data Purge Requested</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Date_Received__c</fullName>
        <description>Created as a part of DBSFCRM-417</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Date  Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WT_Date_of_Request_Received__c</fullName>
        <description>Created as part of DBSFCRM-197</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Date of Request Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WT_Details__c</fullName>
        <description>Created as part of DBSFCRM-299</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Details</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>WT_Email_Address__c</fullName>
        <description>Created as a part of DBSFCRM-120</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>WT_EmployeeIDs__c</fullName>
        <formula>WT_Employee__r.WT_Employee_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employee ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Employee_Location__c</fullName>
        <description>Created as apart of DBSFCRM-120</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Employee Location</label>
        <length>100</length>
        <type>Text</type>
    </fields>
</CustomObject>